<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/textSettings">
        <SwitchPreference
            android:icon="@drawable/ic_baseline_night_mode"
            android:key="@string/idNightMode"
            android:persistent="true"
            android:title="@string/textNightMode"
            tools:targetApi="o" />
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_baseline_volume_down_24"
            android:key="@string/idMusic"
            android:persistent="true"
            android:title="@string/textSound" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/idFX"
            android:title="@string/textFX"
            app:icon="@drawable/ic_baseline_music_note_24"/>
    </PreferenceCategory>
</PreferenceScreen>